[metadata]
name = piargus
version = attr: piargus.__version__
author = lverweijen
author_email = lauwerund@gmail.com
url = https://github.com/lverweijen/piargus
description = Python wrapper around TauArgus
long_description = file: README.md
long_description_content_type = text/markdown
keywords = statistical-disclosure-control tau-argus
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Typing :: Typed

[options]
python_requires = >= 3.7
packages = find:
install_requires = pandas >= 1.5.0

[options.packages.find]
include = piargus*